tdf#123102 Writer: fix numbering at row insertion

in vertically merged cells. Hidden paragraph of
the new merged cell inherited numbering of the
previous row, resulting bad numbering of the next
list item.

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89537
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 3a69e1a6b8eab79c55b6e8f3edd2ee2da45b39c0)

Change-Id: Ib6b29947caa22747ba8c79725ab6f9ef4db31319
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96137
Tested-by: Gabor Kelemen <kelemen.gabor2@nisz.hu>
Reviewed-by: Gabor Kelemen <kelemen.gabor2@nisz.hu>